Fixed notifications and annouces z-index to not overlap bootstrap's modals

--- a/app/styles/less/apps.less
+++ b/app/styles/less/apps.less
@@ -676,7 +676,7 @@ body.sidebar-collapsed .widget-body > ul.acc-menu {
 #notifications {
 
   position: fixed;
-  z-index: 1500;
+  z-index: 1010;
   top: 50px;
   .transition(left, 0.5s, ease;);
 
@@ -709,7 +709,7 @@ body.sidebar-collapsed .widget-body > ul.acc-menu {
   opacity: 1;
   transition: visibility 0s, opacity 0.3s linear;
   position: fixed;
-  z-index: 1500;
+  z-index: 1010;
   top: -100px;
 
   .alert, .fixed .alert-discrete {
